Fix corner z-indexs

--- a/sass/base/leffat.scss
+++ b/sass/base/leffat.scss
@@ -1633,7 +1633,7 @@ input.q {
   height: 130px;
   text-indent: -9999px;
   background: url('../../../../../leffa/rollemaa.png') no-repeat;
-  z-index: 30;
+  z-index: 999999999;
 }
 
 .screen-reader-text {
